[package]
name = "bsky-scylla-leveling-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.24.9"
charybdis = { version = "0.7.10", features = ["migrate"] }
charybdis-migrate = "0.7.10"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
jetstream-oxide = "0.1.0"
log = "0.4.22"
paris = { version = "1.5.15", features = ["macros", "timestamps"] }
scylla = { version = "0.15.1", features = ["chrono-04"] }
tokio = "1.42.0"
