[package]
name = "bsky-scylla-leveling-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atrium-api = "0.24.9"
atrium-xrpc-client = { version = "0.5.10", features = ["reqwest"] }
charybdis = { version = "0.7.10", features = ["migrate"] }
charybdis-migrate = "0.7.10"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
jetstream-oxide = "0.1.0"
log = "0.4.22"
paris = { version = "1.5.15", features = ["macros", "timestamps"] }
reqwest = "0.12.12"
scylla = { version = "0.15.1", features = ["chrono-04"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
async-trait = "0.1.83"
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
env_logger = "0.11.6"
dotenvy = { version = "0.15.7", features = ["clap"] }
